client/src/App.css
/* ... */
.value--block{
  width:32%;
  height:150px;
  box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
  border-radius:5px;
  position: relative;
  transition:0.2s;
  cursor:pointer;
  background-color: var(--primaryBackground);
    color:var(--secondaryTextColor);
}

.value--block:hover{
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.35);
    transition:0.2s;
    transform:scale(1.01)perspective(1px);
}

.value--block:hover > .blue--line{
    height:0;
    transition:0.2s;
}

.blue--line{
  position:absolute;
  width:100%;
  top:0;
  height:7px;
  background: var(--linesBackground);
  border-radius: 5px 5px 0 0;
  transition:0.2s;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility:    hidden;
    -ms-backface-visibility:     hidden;
}

.value--block-content{
  display:flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height:100%;
}

.value--block--value--type{
  margin:0;
    font-weight: bold;
  font-family:Nunito,  "Nunito ExtraBold",sans-serif;
    color:var(--secondaryTextColor);
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility:    hidden;
    -ms-backface-visibility:     hidden;

}

.value--block--value{
  font-size:30px;
  margin:10px 0 0 0;
  font-weight:700;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility:    hidden;
    -ms-backface-visibility:     hidden;
    transition:0.2s;
    opacity: 0;
    animation-name:fadeIn;
    animation-duration:0.6s;
    animation-fill-mode: forwards;
    animation-delay:0.5s;
}

.tooltip{
    position: absolute;
    top:-35px;
    left:-35px;
    color:white;
    background: #5c5c5c;
    padding: 5px 10px;
    transition: 0.3s;
    display: flex;
    opacity: 0;
    border-radius: 3px;
    font-weight: normal;
    font-size:13px;
    white-space: nowrap;
}

.asset--change:hover .tooltip--change{
    transition: 0.3s;
    transition-delay: 0.5s;
    opacity:1;
}

.asset--value:hover .tooltip--value{
    transition: 0.3s;
    transition-delay: 0.5s;
    opacity:1;
}

.asset--amount:hover .tooltip--amount{
    transition: 0.3s;
    transition-delay: 0.5s;
    opacity:1;
}

.makeGreen{
  color:#21AC00 ;
}


/* #####################################  END OF VALUE BLOCK  ###################################### */

/* #####################################  START OF ASSETS  ###################################### */


.assets--container{
  width:100%;
  margin-top:3px;
}

.assets--inner--container{
  margin:0 10% 0 10%;
  padding-bottom: 1px;
  box-shadow: 0 0 7px rgba(0, 0, 0, 0.24);
  border-radius:5px;
  min-height:71vh;
  position:relative;
  padding-top:20px;
  background-color: var(--primaryBackground);
}

.assets--search--filter-container{
  width:100%;
  height:60px;
  display:flex;
  justify-content: space-between;
}

.assets--search--filter{
  margin-left:25px;
  align-self: center;
}

.assets--search--filter input{
  width:300px;
  height:27px;
  border:0;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.24);
  padding-left:10px;

}

.assets--search--filter input::placeholder{
  color: #797979;
  font-family:Nunito,  "Nunito SemiBold",sans-serif;
}

.assets--sort--filter{
  margin-right:25px;
  align-self: center;

}

.assets--sort--filter select{
  width:240px;
  height:27px;
  border:0;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.24);
  padding-left:10px;
  color: #797979;
}

.asset--container{
  margin-left:25px;
  margin-right:25px;
  margin-top:2px;
}

.asset{
  width:100%;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.24);
  height:65px;
  margin-bottom:20px;
  position: relative;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  transition:0.2s;
  cursor:pointer;
}


.asset:hover{
    box-shadow: 0 0 7px rgba(0, 0, 0, 0.28);
    transition:0.2s;
    transform:scale(1.01)perspective(1px);
}

.asset:hover > .asset--blue--line{
    transition:0.2s;
    width:0;
}

.asset--blue--line{
  width:10px;
  transition:0.2s;
  background: var(--linesBackground);
  left:0;
  top:0;
  height:100%;
  position: absolute;
  border-radius: 5px 0 0 5px ;
}

.z--index--1{
    z-index: 1;
}

.asset--content{
  margin-left:50px;
  margin-right:50px;
  display:flex;
  justify-content: space-between;
  align-items: center;
}

.asset--container a{
    text-decoration: none;
}

.asset--image--name--container{
  display:flex;
  align-items: center;
  width: 40%;
}

.asset--details--image--name--container{
    display:flex;
    align-items: center;
}

.asset--name{
  margin-left:30px;
  font-weight: 700;
    color:var(--secondaryTextColor);
}
.asset--details--name{
    margin-left:30px;
    font-weight: 700;
    color:var(--secondaryTextColor);
}

.asset--value{
  font-weight: 700;
    color:var(--secondaryTextColor);
    width:20%;
    position: relative;
}

.asset--amount{
  font-weight: 700;
  color:var(--secondaryTextColor);
    width:20%;
    position: relative;
}

.asset--change{
  font-weight: 700;
  color:#21AC00;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility:    hidden;
    -ms-backface-visibility:     hidden;
    position: relative;
}

.asset--image{
  height:43px;
}

/* #####################################  END OF ASSETS  ###################################### */

/* #####################################  START OF LOGIN  ###################################### */

.login--page{
    width:100%;
    min-height:100vh;
    background:red;
    background: linear-gradient( to right, #4E35F2, #8A28FB);
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}


.login--page--logo--container{
    position:absolute;
    top:5%;
    left:4%;
}
.login--page--logo{
    width:250px;
}

.login--container{
    min-width:500px;
    background:white;
    border-radius:15px;
    box-shadow: 0 0 11px rgba(0, 0, 0, 0.40);
    position:relative;
}

.login--content{
    margin:35px;
}
/* ... */

